--- a/HealingBeacon/app/src/main/res/layout/activity_dashboard.xml
+++ b/HealingBeacon/app/src/main/res/layout/activity_dashboard.xml
@@ -22,8 +22,7 @@
             android:id="@+id/dashboard_patient_pic"
             android:layout_width="0dp"
             android:layout_height="85dp"
-            android:layout_weight="1"
-            android:src="" />
+            android:layout_weight="1"/>
 
         <LinearLayout
             android:id="@+id/dashboard_layout_top_right"
