--- a/HealingBeacon/app/src/main/res/layout/patient_list_item.xml
+++ b/HealingBeacon/app/src/main/res/layout/patient_list_item.xml
@@ -6,11 +6,13 @@
     <TextView
         android:id="@+id/patient_list_item_name"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:textSize="44sp"/>
 
     <TextView
         android:id="@+id/patient_list_item_surname"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:textSize="44sp"/>
 
 </LinearLayout>
