--- a/HealingBeacon/app/src/main/res/layout/activity_dashboard.xml
+++ b/HealingBeacon/app/src/main/res/layout/activity_dashboard.xml
@@ -16,20 +16,20 @@
         android:layout_width="fill_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:weightSum="3">
+        android:weightSum="1">
 
         <ImageView
             android:id="@+id/dashboard_patient_pic"
             android:layout_width="0dp"
-            android:layout_height="85dp"
-            android:layout_weight="1"
-            android:src="" />
+            android:layout_height="fill_parent"
+            android:src=""
+            android:layout_weight="0.5" />
 
         <LinearLayout
             android:id="@+id/dashboard_layout_top_right"
             android:layout_width="0dp"
             android:layout_height="fill_parent"
-            android:layout_weight="2"
+            android:layout_weight="0.5"
             android:orientation="vertical"
             android:weightSum="2">
 
@@ -38,14 +38,19 @@
                 android:layout_width="fill_parent"
                 android:layout_height="0dp"
                 android:layout_weight="1"
-                android:text="JAN" />
+                android:text="JAN"
+                android:gravity="center|bottom"
+                android:textSize="30dp" />
 
             <TextView
                 android:id="@+id/dashboard_surname"
                 android:layout_width="fill_parent"
                 android:layout_height="0dp"
                 android:layout_weight="1"
-                android:text="KOWALSKI" />
+                android:text="KOWALSKI"
+                android:gravity="center|top"
+                android:textSize="30dp"
+                android:textStyle="bold" />
         </LinearLayout>
 
     </LinearLayout>
@@ -63,7 +68,13 @@
             android:layout_width="fill_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
-            android:text="PERSONAL DATA:" />
+            android:text="PERSONAL DATA"
+            android:gravity="center_vertical|left"
+            android:textSize="25dp"
+            android:background="#fff"
+            android:textColor="#4560F2"
+            android:paddingLeft="20px"
+            android:textStyle="bold" />
 
         <LinearLayout
             android:id="@+id/dashboard_data_first_row"
@@ -71,33 +82,46 @@
             android:layout_height="0dp"
             android:layout_weight="1"
             android:orientation="horizontal"
-            android:weightSum="4">
+            android:weightSum="4"
+            android:background="#fff">
 
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="fill_parent"
                 android:layout_weight="1"
-                android:text="age" />
+                android:text="age"
+                android:gravity="center|center_vertical"
+                android:textSize="15dp"
+                android:textColor="#333034" />
 
             <TextView
                 android:id="@+id/dashboard_age"
                 android:layout_width="0dp"
                 android:layout_height="fill_parent"
                 android:layout_weight="1"
-                android:text="33" />
+                android:text="33"
+                android:gravity="center|center_vertical"
+                android:textSize="20dp"
+                android:textStyle="bold" />
 
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="fill_parent"
                 android:layout_weight="1"
-                android:text="weight" />
+                android:text="weight"
+                android:gravity="center|center_vertical"
+                android:textSize="15dp"
+                android:textColor="#333034" />
 
             <TextView
                 android:id="@+id/dashboard_weight"
                 android:layout_width="0dp"
                 android:layout_height="fill_parent"
                 android:layout_weight="1"
-                android:text="100 kg" />
+                android:textSize="20dp"
+                android:text="100 kg"
+                android:gravity="center"
+                android:textStyle="bold" />
 
         </LinearLayout>
 
@@ -107,33 +131,46 @@
             android:layout_height="0dp"
             android:layout_weight="1"
             android:orientation="horizontal"
-            android:weightSum="4">
+            android:weightSum="4"
+            android:background="#fff">
 
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="fill_parent"
                 android:layout_weight="1"
-                android:text="height" />
+                android:text="height"
+                android:gravity="center|center_vertical"
+                android:textSize="15dp"
+                android:textColor="#333034" />
 
             <TextView
                 android:id="@+id/dashboard_height"
                 android:layout_width="0dp"
                 android:layout_height="fill_parent"
                 android:layout_weight="1"
-                android:text="180 cm" />
+                android:text="180 cm"
+                android:gravity="center|center_vertical"
+                android:textSize="20dp"
+                android:textStyle="bold" />
 
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="fill_parent"
                 android:layout_weight="1"
-                android:text="sex" />
+                android:text="sex"
+                android:gravity="center|center_vertical"
+                android:textSize="15dp"
+                android:textColor="#333034" />
 
             <TextView
                 android:id="@+id/dashboard_sex"
                 android:layout_width="0dp"
                 android:layout_height="fill_parent"
                 android:layout_weight="1"
-                android:text="male" />
+                android:text="male"
+                android:gravity="center|center_vertical"
+                android:textSize="20dp"
+                android:textStyle="bold" />
         </LinearLayout>
 
     </LinearLayout>
@@ -157,22 +194,24 @@
                 android:layout_height="fill_parent"
                 android:layout_weight="1"
                 android:onClick="medicalResearch"
-                android:background="#A77FFF"
+                android:background="#ff6464"
                 android:textColor="#FFFFFF"
                 android:text="MEDICAL RESEARCH"
                 android:textSize="30dp"
-                android:gravity="center_vertical|center_horizontal" />
+                android:gravity="center_vertical|center_horizontal"
+                android:textStyle="bold" />
 
             <Button
                 android:layout_width="0dp"
                 android:layout_height="fill_parent"
                 android:layout_weight="1"
                 android:onClick="drugs"
-                android:background="#7FCAFF"
+                android:background="#4560F2"
                 android:textColor="#FFFFFF"
                 android:text="DRUGS"
                 android:textSize="30dp"
-                android:gravity="center_vertical|center_horizontal" />
+                android:gravity="center_vertical|center_horizontal"
+                android:textStyle="bold" />
 
         </LinearLayout>
 
@@ -187,11 +226,12 @@
                 android:layout_height="fill_parent"
                 android:layout_weight="1"
                 android:onClick="hospitalStay"
-                android:background="#62f5c8"
+                android:background="#4560F2"
                 android:textColor="#FFFFFF"
                 android:textSize="30dp"
                 android:gravity="center_vertical|center_horizontal"
-                android:text="HOSPITAL STAY" />
+                android:text="HOSPITAL STAY"
+                android:textStyle="bold" />
 
             <Button
                 android:layout_width="0dp"
@@ -201,8 +241,9 @@
                 android:textColor="#FFFFFF"
                 android:textSize="30dp"
                 android:gravity="center_vertical|center_horizontal"
-                android:background="#ff7fb0"
-                android:text="HISTORY" />
+                android:background="#ff6464"
+                android:text="HISTORY"
+                android:textStyle="bold" />
 
         </LinearLayout>
 
