Add dashboard view

--- a/HealingBeacon/app/src/main/res/layout/activity_dashboard.xml
+++ b/HealingBeacon/app/src/main/res/layout/activity_dashboard.xml
@@ -9,6 +9,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:background="#D891FF"
     android:weightSum="4"
+    android:keepScreenOn="true"
     tools:context="sithlords.com.healingbeacon.patients.DashboardActivity">
 
     <LinearLayout
