--- a/HealingBeacon/app/src/main/res/layout/activity_dashboard.xml
+++ b/HealingBeacon/app/src/main/res/layout/activity_dashboard.xml
@@ -23,7 +23,8 @@
             android:id="@+id/dashboard_patient_pic"
             android:layout_width="0dp"
             android:layout_height="fill_parent"
-            android:layout_weight="0.5" />
+            android:layout_weight="0.5"
+            android:padding="15px"/>
 
         <LinearLayout
             android:id="@+id/dashboard_layout_top_right"
