--- a/HealingBeacon/app/src/main/res/layout/patient_list_item.xml
+++ b/HealingBeacon/app/src/main/res/layout/patient_list_item.xml
@@ -11,7 +11,9 @@
         android:layout_height="fill_parent"
         android:id="@+id/imageView"
         android:layout_weight="0.3"
-        android:src="@mipmap/ic_launcher" />
+        android:src="@mipmap/test"
+        android:paddingLeft="15dp"
+        android:paddingRight="15dp" />
 
     <TextView
         android:id="@+id/patient_list_item_surname"
