--- a/HealingBeacon/app/src/main/res/layout/activity_laboratory_tests_results.xml
+++ b/HealingBeacon/app/src/main/res/layout/activity_laboratory_tests_results.xml
@@ -1,12 +1,24 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="sithlords.com.healingbeacon.LaboratoryTestsResults">
+    android:orientation="vertical"
+    tools:context="sithlords.com.healingbeacon.LaboratoryTestsResultsActivity">
 
-    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    <TextView
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="2sp"
+        android:text="Results"
+        android:textSize="25sp" />
 
-</RelativeLayout>
+    <ListView
+        android:id="@+id/laboratoryTestsResultsList"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"/>
+
+</LinearLayout>
