--- a/HealingBeacon/app/src/main/res/layout/activity_laboratory_tests.xml
+++ b/HealingBeacon/app/src/main/res/layout/activity_laboratory_tests.xml
@@ -2,7 +2,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
@@ -11,11 +10,16 @@
     tools:context="sithlords.com.healingbeacon.LaboratoryTestsActivity">
 
     <TextView
+        android:id="@+id/textView"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="2sp"
-        android:text="Laboratory Tests"
-        android:textSize="25sp" />
+        android:text="LABORATORY TESTS"
+        android:textSize="25dp"
+        android:layout_marginBottom="5dp"
+        android:padding="5dp"
+        android:background="#ff6464"
+        android:textColor="#fff"
+        android:layout_gravity="center_horizontal" />
 
     <ListView
         android:id="@+id/laboratoryTestsList"
