--- a/HealingBeacon/app/src/main/res/layout/activity_medical_research.xml
+++ b/HealingBeacon/app/src/main/res/layout/activity_medical_research.xml
@@ -2,7 +2,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
@@ -13,9 +12,12 @@
     <TextView
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="2sp"
-        android:text="Medical Research"
-        android:textSize="25sp" />
+        android:text="MEDICAL RESEARCH"
+        android:textSize="25sp"
+        android:layout_marginBottom="5dp"
+        android:padding="5dp"
+        android:background="#ff6464"
+        android:textColor="#fff"/>
 
     <ListView
         android:id="@+id/medicalResearchList"
