--- a/HealingBeacon/app/src/main/res/layout/activity_patients_in_range.xml
+++ b/HealingBeacon/app/src/main/res/layout/activity_patients_in_range.xml
@@ -1,11 +1,24 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
     android:keepScreenOn="true"
+    android:orientation="vertical"
     tools:context="sithlords.com.healingbeacon.patients.PatientsInRange">
+
+
+    <TextView
+        android:id="@+id/prescribed_drugs_title"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:text="PATIENTS IN RANGE"
+        android:textSize="25dp"
+        android:layout_marginBottom="5dp"
+        android:padding="5dp"
+        android:background="#ff37f2a3"
+        android:textColor="#fff"
+        android:gravity="center" />
 
     <ListView
         android:id="@+id/patients_list"
@@ -13,4 +26,4 @@
         android:layout_height="fill_parent">
     </ListView>
 
-</RelativeLayout>
+</LinearLayout>
