--- a/HealingBeacon/app/src/main/res/layout/activity_dashboard.xml
+++ b/HealingBeacon/app/src/main/res/layout/activity_dashboard.xml
@@ -228,12 +228,12 @@
                 android:layout_width="0dp"
                 android:layout_height="fill_parent"
                 android:layout_weight="1"
-                android:onClick="hospitalStay"
+                android:onClick="notes"
                 android:background="#4560F2"
                 android:textColor="#FFFFFF"
                 android:textSize="30dp"
                 android:gravity="center_vertical|center_horizontal"
-                android:text="HOSPITAL STAY"
+                android:text="NOTES"
                 android:textStyle="bold" />
 
             <Button
