--- a/HealingBeacon/app/src/main/res/layout/history_list_item.xml
+++ b/HealingBeacon/app/src/main/res/layout/history_list_item.xml
@@ -2,18 +2,34 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:weightSum="2">
+    android:weightSum="9">
+
+    <ImageView
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:padding="10dp"
+        android:background="@android:color/transparent"
+        android:paddingLeft="1dp"
+        android:layout_gravity="center_vertical"
+        android:src="@drawable/dot"/>
 
     <TextView
         android:id="@+id/history_item_date"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_weight="1"/>
+        android:layout_gravity="center_vertical"
+        android:background="@android:color/transparent"
+        android:textSize="22sp"
+        android:layout_weight="4" />
 
     <TextView
         android:id="@+id/history_item_content"
         android:layout_width="0dp"
+        android:layout_gravity="center_vertical"
         android:layout_height="wrap_content"
-        android:layout_weight="1"/>
+        android:textSize="22sp"
+        android:background="@android:color/transparent"
+        android:layout_weight="4"/>
 
 </LinearLayout>
