--- a/HealingBeacon/app/src/main/res/layout/add_blood_dialog.xml
+++ b/HealingBeacon/app/src/main/res/layout/add_blood_dialog.xml
@@ -7,14 +7,14 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:weightSum="2">
+        android:weightSum="3">
 
         <TextView
             android:layout_width="0dp"
             android:layout_height="fill_parent"
             android:layout_weight="1"
             android:gravity="center_horizontal"
-            android:textSize="30sp"
+            android:textSize="20sp"
             android:text="DATE"/>
 
         <TextView
@@ -22,9 +22,16 @@
             android:layout_height="fill_parent"
             android:layout_weight="1"
             android:gravity="center_horizontal"
-            android:textSize="30sp"
-            android:text="CONTENT"/>
+            android:textSize="20sp"
+            android:text="DIASTOLE"/>
 
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="fill_parent"
+            android:layout_weight="1"
+            android:gravity="center_horizontal"
+            android:textSize="20sp"
+            android:text="SYSTOLE"/>
     </LinearLayout>
 
     <LinearLayout
@@ -32,7 +39,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/add_dialog_info"
         android:orientation="horizontal"
-        android:weightSum="2">
+        android:weightSum="3">
 
         <EditText
             android:id="@+id/dialog_time"
@@ -41,7 +48,13 @@
             android:layout_weight="1"/>
 
         <EditText
-            android:id="@+id/dialog_temp"
+            android:id="@+id/dialog_diastole"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"/>
+
+        <EditText
+            android:id="@+id/dialog_systole"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"/>
