--- a/HealingBeacon/app/src/main/res/layout/activity_notes.xml
+++ b/HealingBeacon/app/src/main/res/layout/activity_notes.xml
@@ -1,10 +1,23 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="sithlords.com.healingbeacon.NotesActivity">
+    tools:context="sithlords.com.healingbeacon.NotesActivity"
+    android:orientation="vertical">
+
+
+    <TextView
+        android:id="@+id/prescribed_drugs_title"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:text="NOTES"
+        android:textSize="25dp"
+        android:layout_marginBottom="5dp"
+        android:padding="5dp"
+        android:background="#4560F2"
+        android:textColor="#fff"
+        android:gravity="center" />
 
     <ListView
         android:id="@+id/notes_list"
@@ -12,4 +25,4 @@
         android:layout_height="fill_parent">
     </ListView>
 
-</RelativeLayout>
+</LinearLayout>
