--- a/HealingBeacon/app/src/main/res/layout/activity_history.xml
+++ b/HealingBeacon/app/src/main/res/layout/activity_history.xml
@@ -1,9 +1,10 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:background="@drawable/history_background"
     android:keepScreenOn="true"
+    android:orientation="vertical"
     tools:context="sithlords.com.healingbeacon.HistoryActivity">
 
     <TextView
@@ -27,4 +28,4 @@
         android:dividerHeight="0dp">
     </ListView>
 
-</RelativeLayout>
+</LinearLayout>
