--- a/HealingBeacon/app/src/main/res/layout/activity_history.xml
+++ b/HealingBeacon/app/src/main/res/layout/activity_history.xml
@@ -11,7 +11,7 @@
         android:id="@+id/prescribed_drugs_title"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:text="NOTES"
+        android:text="HISTORY"
         android:textSize="25dp"
         android:layout_marginBottom="5dp"
         android:padding="5dp"
