--- a/HealingBeacon/app/src/main/res/layout/add_temperature_dialog.xml
+++ b/HealingBeacon/app/src/main/res/layout/add_temperature_dialog.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent">
+    android:layout_width="match_parent" android:layout_height="match_parent"
+    android:id="@+id/">
 
     <LinearLayout
         android:id="@+id/add_dialog_info"
@@ -15,7 +16,8 @@
             android:layout_weight="1"
             android:gravity="center_horizontal"
             android:textSize="30sp"
-            android:text="CONTENT"/>
+            android:text="TEMPERATURE"
+            android:id="@+id/" />
 
     </LinearLayout>
 
