--- a/HealingBeacon/app/src/main/res/layout/notes_item.xml
+++ b/HealingBeacon/app/src/main/res/layout/notes_item.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal" android:layout_width="match_parent"
     android:weightSum="2"
-    android:layout_height="40dp">
+    android:layout_height="wrap_content">
 
     <TextView
         android:id="@+id/notes_item_first"
@@ -10,7 +10,7 @@
         android:layout_height="fill_parent"
         android:layout_weight="1"
         android:text="To jest notatka testowa skurwysynu a jak Ci sie nie podoba to jebac"
-        android:textSize="10dp" />
+        android:textSize="20dp" />
 
     <TextView
         android:id="@+id/notes_item_second"
@@ -18,5 +18,5 @@
         android:layout_height="fill_parent"
         android:layout_weight="1"
         android:text="To jest notatka testowa skurwysynu a jak Ci sie nie podoba to jebac"
-        android:textSize="10dp" />
+        android:textSize="20dp" />
 </LinearLayout>
