--- a/HealingBeacon/app/src/main/res/layout/notes_item.xml
+++ b/HealingBeacon/app/src/main/res/layout/notes_item.xml
@@ -10,7 +10,8 @@
         android:layout_height="fill_parent"
         android:layout_weight="1"
         android:text="To jest notatka testowa skurwysynu a jak Ci sie nie podoba to jebac"
-        android:textSize="20dp" />
+        android:textSize="20dp"
+        android:paddingRight="5dp"/>
 
     <TextView
         android:id="@+id/notes_item_second"
@@ -18,5 +19,6 @@
         android:layout_height="fill_parent"
         android:layout_weight="1"
         android:text="To jest notatka testowa skurwysynu a jak Ci sie nie podoba to jebac"
+        android:paddingLeft="5dp"
         android:textSize="20dp" />
 </LinearLayout>
